Fix overflowing code blocks

--- a/app/assets/stylesheets/globals.scss
+++ b/app/assets/stylesheets/globals.scss
@@ -93,6 +93,7 @@ a:hover {
       border-radius: 8px;
       padding: 8px;
       display: block;
+      overflow-x: auto;
     }
   }
 }
